--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "backend/src/server.js",
   "scripts": {
     "start": "node backend/src/server.js",
-    "dev": "node --watch backend/src/server.js",
-    "test": "node --test backend/src/**/*.test.js"
+    "dev": "concurrently \"npm start\" \"serve frontend\"",
+    "test": "jest"
   },
   "keywords": [
     "e-governance",
@@ -19,10 +19,17 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^9.2.1",
+    "eslint": "^9.39.2",
+    "jest": "^29.7.0",
+    "prettier": "^3.7.4",
+    "serve": "^14.2.5"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
